src/components/dashboard/currencyGraph.css
@import '../app/variables';

.wrapper {
  height: 100%;
  position: relative;

  & h2 {
    margin: 40px 32px 20px;
    font-size: 28px;
  }
}

.chartWrapper {
  height: calc(80% + 50px);
  width: calc(100% + 50px);
  margin: 10px -25px 0px;
  position: absolute;
  bottom: -10px;
  left: 0;
}

.errorMessage {
  margin: 40px;
  font-size: 14px;
  color: #3c5068;
  text-align: center;
}

.stepSwitchWrapper {
  float: right;
  margin: 50px;
}

.stepSwitch {
  padding: 8px 16px;
  cursor: pointer;
  font-size: 15px;
  font-weight: 500;
  color: var(--color-grayscale-medium);

  &.active {
    color: var(--color-white);
    background: var(--gradient-action-blue);
    border-radius: var(--border-radius-normal);
  }
}

@media (--medium-viewport) {
  .chartWrapper {
    height: calc(100% + 30px);
    margin: 0 -25px 20px;
  }
}

